--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  background-color: #c5c7c99d;
+  background-color: #c5c7c9;
   border-bottom: solid 1px #ccc;
   padding: 0.5rem 1rem;
   justify-content: space-around;
@@ -57,7 +57,7 @@
 
 .nav-link {
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
   margin-right: 1rem;
 }
 
@@ -123,4 +123,17 @@
   background-color: #f8d7da;
   color: #721c24;           
   border: 1px solid #f5c6cb;
+}
+
+.nav-logout {
+  padding: 10px 15px;
+  background-color: blue;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 14px;
+  width: 8%;
+  font-weight: bold;
+  margin-left: 15px;
 }
